Navbar refacto, and init auth middleware

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
     "contact": "Contact",
     "login": "Login",
     "logout": "Logout",
-    "register": "Register",
+    "signup": "Sign Up",
     "profile": "Profile",
     "settings": "Settings"
   },
