--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,7 +10,7 @@
     "contact": "Contact",
     "login": "Connexion",
     "logout": "Déconnexion",
-    "register": "Inscription",
+    "signup": "Inscription",
     "profile": "Profil",
     "settings": "Paramètres"
   },
