Add pricing table

--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
   "navigation": {
     "home": "Home",
     "about": "About",
+    "pricing": "Pricing",
     "contact": "Contact",
     "login": "Login",
     "logout": "Logout",
