--- a/locales/fr.json
+++ b/locales/fr.json
@@ -7,6 +7,7 @@
   "navigation": {
     "home": "Accueil",
     "about": "À propos",
+    "pricing": "Tarifs",
     "contact": "Contact",
     "login": "Connexion",
     "logout": "Déconnexion",
